# snapshot-explorer

./: README.md  meson.build  meson_options.txt  org.github.atheriel.snapshot-explorer.json
data/: meson.build  org.github.atheriel.snapshot-explorer.appdata.xml.in  org.github.atheriel.snapshot-explorer.desktop.in  org.github.atheriel.snapshot-explorer.gschema.xml
data/icons/: meson.build
nautilus/: extension.vala  fs.vala  meson.build  shim.c  zfs.vala
po/: POTFILES  meson.build  snapshot-explorer.pot
src/: dbus.vala  fs.vala  main.vala  meson.build  shortcuts.ui  shortcuts.vala  snapshot_explorer.gresource.xml  window.vala  zfs.vala
vapi/: libnautilus-extension.vapi  nautilus.vapi
